# duckdb_protobuf

./: .gitignore  Cargo.toml  Makefile  README.md
.github/: build.yml
.github/workflows/: build.yml
patches/: duckdb+1.0.0.patch  duckdb-loadable-macros+0.1.2.patch  libduckdb-sys+1.0.0.patch
src/: descriptors.rs  io.rs  lib.rs  read.rs  types.rs  vtab.rs
tests/it/: main.rs
tests/protos/: user.proto
