[workspace]
resolver = "2"

members = [
    "packages/duckdb",
    "packages/duckdb-loadable-macros",
    "packages/duckdb_metadata",
    "packages/duckdb_metadata_bin",
    "packages/duckdb_protobuf"
]

[patch.crates-io]
duckdb = { path = 'packages/duckdb' }
duckdb-loadable-macros = { path = 'packages/duckdb-loadable-macros' }
